// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package fleet;

import "infra/libs/fleet/protos/src/location.proto";

// Next Tag: 3
message ChopsAsset {
  // Asset's state and location
  string id = 1;
  Location location = 2;
}
